--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <h2>Habilidades Técnicas</h2>
     <ul>
         <li>Python Básico</li>
+        <li>JavaScript Básico</li>
+        <li>React Native Básico</li>
         <li>HTML Básico</li>
         <li>MYSQL Básico</li>
         <li>Sony Vegas Básico</li>
