adicionado os certificados

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <li>Sony Vegas Básico</li>
     </ul>
     <hr>
+    <h2>Certificados</h2>
+    <ul>
+        <li>JavaScript Essentials 1 - Cisco</li>
+        <li>Pyhton Essentials 1 - Cisco</li>
+    </ul>
+    <hr>
     <h2>Idiomas</h2>
     <ol>
         <li>Inglês Avançado</li>
