--- a/index.html
+++ b/index.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume - João Carlo</title>
+    <title>Curriculum - João Carlo</title>
 </head>
 <body>
 
 <h1>João Carlo Freitas Moia</h1>
 <hr><br>
-<a><b>Address:</b> Rua José Antonio 3354</a> <br>
-<a><b>Phone:</b> <u>(67) 98471-0181</u></a> <br>
+<a><b>Dirección:</b> Rua José Antonio 3354</a> <br>
+<a><b>Teléfono:</b> <u>(67) 98471-0181</u></a> <br>
 <a><b>Email:</b> joaocarlofreitas@hotmail.com</a> <br><br>
 <hr>
-<h2>Professional Summary</h2>
-<p>Worked as a 'jack of all trades' at my grandfather's bar for six years, where I learned to sell and communicate with diverse audiences.</p>
+<h2>Resumen Profesional</h2>
+<p>Trabajé como 'haz todo' en el bar de mi abuelo durante seis años, donde aprendí a vender y comunicarme con diversos tipos de público.</p>
 <hr>
-<h2>Education</h2>
+<h2>Educación</h2>
 <a><b>Senac Hub Academy</b></a><br>
-<a><b>Degree:</b> Analysis and Systems Development Technician</a><br>
-<a><b>Year of Graduation:</b> 2024</a><br>
+<a><b>Técnico:</b> Análisis y Desarrollo de Sistemas</a><br>
+<a><b>Año de Graduación:</b> 2024</a><br>
 <hr><br>
-<h2>Professional Experience</h2>
+<h2>Experiencia Profesional</h2>
 <a><b>Bar e Lanchonete do Macarrão</b></a><br>
-<a><b>Position:</b> Manager, Attendant, Cleaning, Cashier</a><br>
-<a><b>Responsibilities:</b> Receive and verify new merchandise, open, close, and attend to customers.</a><br>
-<a><b>Period:</b> 2011 - 2017</a>
+<a><b>Puesto:</b> Gerente, Atendente, Limpieza, Caja</a><br>
+<a><b>Responsabilidades:</b> Recibir y verificar mercancías nuevas, abrir, cerrar y atender.</a><br>
+<a><b>Período:</b> 2011 - 2017</a>
 <hr>
-<h2>Technical Skills</h2>
+<h2>Habilidades Técnicas</h2>
 <ul>
-    <li>Basic Python</li>
-    <li>Basic JavaScript</li>
-    <li>Basic React Native</li>
-    <li>Basic HTML</li>
-    <li>Basic MYSQL</li>
-    <li>Basic Sony Vegas</li>
+    <li>Python Básico</li>
+    <li>JavaScript Básico</li>
+    <li>React Native Básico</li>
+    <li>HTML Básico</li>
+    <li>MYSQL Básico</li>
+    <li>Sony Vegas Básico</li>
 </ul>
 <hr>
-<h2>Certificates</h2>
+<h2>Certificados</h2>
 <ul>
     <li>JavaScript Essentials 1 - Cisco</li>
-    <li>Python Essentials 1 - Cisco</li>
+    <li>Pyhton Essentials 1 - Cisco</li>
 </ul>
 <hr>
-<h2>Languages</h2>
+<h2>Idiomas</h2>
 <ol>
-    <li>Advanced English</li>
-    <li>Fluent Spanish</li>
+    <li>Inglés Avanzado</li>
+    <li>Español Fluido</li>
 </ol>
 <hr>
-<h2>References</h2>
-<a><b>Professor:</b> Maurício - <b>Contact: </b> +55 67 9622-7115</a><br>
-<a><b>Professor:</b> Ederson - <b>Contact: </b> +55 67 9634-3031</a><br>
-<a><b>Mentor:</b> José Alves - <b>Contact: </b> +55 34 9276-0635</a><br>
+<h2>Referencias</h2>
+<a><b>Profesor:</b> Mauricio - <b>Contacto: </b> +55 67 9622-7115</a><br>
+<a><b>Profesor:</b> Ederson - <b>Contacto: </b> +55 67 9634-3031</a><br>
+<a><b>Mentor:</b> José Alves - <b>Contacto: </b> +55 34 9276-0635</a><br>
 
 </body>
 </html>
