--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,50 +9,55 @@
 
 <h1>João Carlo Freitas Moia</h1>
 <hr><br>
-<a><b>Dirección:</b> Rua José Antonio 3354</a> <br>
-<a><b>Teléfono:</b> <u>(67) 98471-0181</u></a> <br>
+<a><b>Endereço:</b> Rua José Antonio 3354</a> <br>
+<a><b>Telefone:</b> <u>(67) 98471-0181</u></a> <br>
 <a><b>Email:</b> joaocarlofreitas@hotmail.com</a> <br><br>
 <hr>
-<h2>Resumen Profesional</h2>
-<p>Trabajé como 'haz todo' en el bar de mi abuelo durante seis años, donde aprendí a vender y comunicarme con diversos tipos de público.</p>
+<h2>Resumo Profissional</h2>
+<p>Trabalhei como 'faz-tudo' no bar do meu avô por seis anos, onde aprendi a vender e me comunicar com diversos tipos de público.</p>
 <hr>
-<h2>Educación</h2>
+<h2>Educação</h2>
 <a><b>Senac Hub Academy</b></a><br>
-<a><b>Técnico:</b> Análisis y Desarrollo de Sistemas</a><br>
-<a><b>Año de Graduación:</b> 2024</a><br>
+<a><b>Técnico:</b> Análise e Desenvolvimento de Sistemas</a><br>
+<a><b>Ano de Graduação:</b> 2024</a><br>
 <hr><br>
-<h2>Experiencia Profesional</h2>
+<h2>Experiência Profissional</h2>
 <a><b>Bar e Lanchonete do Macarrão</b></a><br>
-<a><b>Puesto:</b> Gerente, Atendente, Limpieza, Caja</a><br>
-<a><b>Responsabilidades:</b> Recibir y verificar mercancías nuevas, abrir, cerrar y atender.</a><br>
+<a><b>Cargo:</b> Gerente, Atendente, Limpeza, Caixa</a><br>
+<a><b>Responsabilidades:</b> Receber e verificar mercadorias novas, abrir, fechar e atender.</a><br>
 <a><b>Período:</b> 2011 - 2017</a>
 <hr>
 <h2>Habilidades Técnicas</h2>
 <ul>
+    <li>C# Intermediário</li>
+    <li>Unity 2D e 3D</li>
+    <li>Animator</li>
     <li>Python Básico</li>
     <li>JavaScript Básico</li>
     <li>React Native Básico</li>
     <li>HTML Básico</li>
     <li>MYSQL Básico</li>
-    <li>Sony Vegas Básico</li>
+    <li>S.O.L.I.D</li>
+    <li>Github</li>
+    <li>Versionamento</li>
 </ul>
 <hr>
 <h2>Certificados</h2>
 <ul>
     <li>JavaScript Essentials 1 - Cisco</li>
-    <li>Pyhton Essentials 1 - Cisco</li>
+    <li>Python Essentials 1 - Cisco</li>
 </ul>
 <hr>
 <h2>Idiomas</h2>
 <ol>
-    <li>Inglés Avanzado</li>
-    <li>Español Fluido</li>
+    <li>Inglês Avançado</li>
+    <li>Espanhol Fluente</li>
 </ol>
 <hr>
-<h2>Referencias</h2>
-<a><b>Profesor:</b> Mauricio - <b>Contacto: </b> +55 67 9622-7115</a><br>
-<a><b>Profesor:</b> Ederson - <b>Contacto: </b> +55 67 9634-3031</a><br>
-<a><b>Mentor:</b> José Alves - <b>Contacto: </b> +55 34 9276-0635</a><br>
+<h2>Referências</h2>
+<a><b>Professor:</b> Mauricio - <b>Contato: </b> +55 67 9622-7115</a><br>
+<a><b>Professor:</b> Ederson - <b>Contato: </b> +55 67 9634-3031</a><br>
+<a><b>Mentor:</b> José Alves - <b>Contato: </b> +55 34 9276-0635</a><br>
 
 </body>
 </html>
